--- a/app/src/main/res/layout/item_affix.xml
+++ b/app/src/main/res/layout/item_affix.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:minHeight="45dp"
+    android:minHeight="35dp"
     android:gravity="center_vertical"
     android:layout_height="wrap_content">
 
@@ -12,10 +12,12 @@
         android:orientation="horizontal">
     <TextView
         android:id="@+id/name"
+        android:textSize="15sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/describe"
+        android:textSize="15sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     </LinearLayout>
