--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="purple">#EF00FE</color>
+    <color name="purple">#fe00b0</color>
     <color name="green">#00FF00</color>
-    <color name="pink">#F382F3</color>
+    <color name="pink">#ee82f3</color>
     <color name="black">#000000</color>
     <color name="transparent">#00000000</color>
 </resources>
