--- a/app/src/main/res/layout/activity_affix.xml
+++ b/app/src/main/res/layout/activity_affix.xml
@@ -21,7 +21,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <Button
+        android:id="@+id/use"
+        android:layout_marginBottom="15dp"
+        android:text="穿戴"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/btn_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <RelativeLayout
+        android:id="@+id/btn_layout"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
