--- a/app/src/main/res/layout/item_end_new.xml
+++ b/app/src/main/res/layout/item_end_new.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/goods_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,13 +15,22 @@
         android:src="@mipmap/ic_launcher" />
 
     <TextView
+        android:layout_toRightOf="@+id/goods_img"
+        android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
-        android:layout_gravity="center_vertical"
         android:id="@+id/goods_name"
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-    </LinearLayout>
+        <TextView
+            android:id="@+id/goods_use"
+            android:layout_marginRight="15dp"
+            android:textColor="@color/green"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
     <TextView
         android:id="@+id/goods_new"
         android:visibility="gone"
