--- a/app/src/main/res/layout/item_pro.xml
+++ b/app/src/main/res/layout/item_pro.xml
@@ -19,6 +19,8 @@
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/pro_space"
+            android:layout_marginLeft="5dp"
+            android:textColor="@color/green"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
