--- a/app/src/main/res/layout/activity_affix.xml
+++ b/app/src/main/res/layout/activity_affix.xml
@@ -7,7 +7,15 @@
     <TextView
         android:layout_marginTop="20dp"
         android:id="@+id/name"
+        android:textColor="@color/pink"
         android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/base"
+        android:layout_below="@+id/name"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/pink"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <ListView
@@ -16,7 +24,7 @@
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
         android:divider="@color/transparent"
-        android:layout_below="@+id/name"
+        android:layout_below="@+id/base"
         android:layout_marginTop="15dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
