--- a/app/src/main/res/layout/activity_pro.xml
+++ b/app/src/main/res/layout/activity_pro.xml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:background="@color/black"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@color/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/tablebg" />
     <TextView
+        android:id="@+id/pro_text"
         android:text="个人属性"
         android:textStyle="bold"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="15dp"
-        android:textColor="@color/white"
+        android:layout_marginLeft="15dp"
+        android:textColor="@color/normal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <GridView
+        android:layout_below="@+id/pro_text"
         android:numColumns="2"
         android:layout_marginTop="25dp"
         android:id="@+id/pro_list"
@@ -23,4 +29,4 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-</LinearLayout>
+</RelativeLayout>
