--- a/app/src/main/res/layout/item_affix.xml
+++ b/app/src/main/res/layout/item_affix.xml
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:minHeight="35dp"
+    android:minHeight="25dp"
     android:gravity="center_vertical"
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+        <ImageView
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/item_icon"
+            android:scaleType="center"
+            android:layout_width="15dp"
+            android:layout_height="15dp" />
     <TextView
         android:id="@+id/name"
         android:textSize="15sp"
