--- a/app/src/main/res/layout/item_goods.xml
+++ b/app/src/main/res/layout/item_goods.xml
@@ -18,7 +18,7 @@
         <TextView
             android:id="@+id/goods_name"
             android:layout_marginTop="5dp"
-            android:textColor="@color/pink"
+            android:textColor="@color/normal"
             android:layout_gravity="center_horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
