--- a/app/src/main/res/layout/item_pro.xml
+++ b/app/src/main/res/layout/item_pro.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:minHeight="40dp"
-    android:background="@color/black"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -13,7 +12,7 @@
 
         <TextView
             android:id="@+id/pro_name"
-            android:textColor="@color/white"
+            android:textColor="@color/normal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
