网络请求框架

--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -12,6 +12,7 @@
         android:src="@drawable/tablebg" />
 
     <ListView
+        android:layout_marginTop="45dp"
         android:id="@+id/goods_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
