修改和展示昵称

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
+
     <TextView
         android:textColor="@color/normal"
         android:text="我的装备:"
@@ -39,5 +41,15 @@
         android:layout_marginTop="25dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/text_info"
+            android:textColor="@color/normal"
+            android:text="点击查看我的信息>>>"
+            android:minHeight="40dp"
+            android:gravity="center"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </RelativeLayout>
