--- a/app/src/main/res/layout/item_end_new.xml
+++ b/app/src/main/res/layout/item_end_new.xml
@@ -35,8 +35,8 @@
         android:id="@+id/goods_new"
         android:visibility="gone"
         android:text="新建"
-        android:background="@color/pink"
-        android:textColor="@color/normal"
+        android:background="@color/blues"
+        android:textColor="@color/red"
         android:layout_below="@+id/goods_layout"
         android:gravity="center"
         android:layout_width="match_parent"
