--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -5,15 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:src="@drawable/tablebg" />
-
+    <include layout="@layout/action_bar_layout"/>
     <ListView
         android:layout_marginTop="45dp"
         android:id="@+id/goods_list"
+        android:layout_below="@+id/action_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
