--- a/app/src/main/res/layout/activity_pro.xml
+++ b/app/src/main/res/layout/activity_pro.xml
@@ -3,15 +3,12 @@
     android:background="@color/background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:src="@drawable/tablebg" />
+    <include layout="@layout/action_bar_layout"/>
     <TextView
         android:id="@+id/pro_text"
         android:text="个人属性"
         android:textStyle="bold"
+        android:layout_below="@+id/action_bar"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="45dp"
         android:layout_marginLeft="15dp"
