--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,50 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
+    android:orientation="horizontal"
     tools:context=".ui.MainActivity">
 
-    <LinearLayout
-        android:layout_marginTop="45dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+<RelativeLayout
+    android:layout_width="0dp"
+    android:layout_weight="1"
+    android:layout_height="match_parent">
 
-
-    <TextView
-        android:textColor="@color/normal"
-        android:text="我的装备:"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
     <GridView
         android:id="@+id/gridview"
-        android:numColumns="5"
+        android:layout_centerInParent="true"
+        android:numColumns="2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
-    <TextView
-        android:id="@+id/text_mypro"
-        android:textColor="@color/normal"
-        android:text="点击查看我的属性>>>"
-        android:minHeight="40dp"
+</RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:gravity="center"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="25dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent">
+
+        <GridView
+            android:numColumns="2"
+            android:layout_marginTop="25dp"
+            android:id="@+id/pro_list"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
         <TextView
             android:id="@+id/text_info"
+            android:layout_below="@+id/pro_list"
             android:textColor="@color/normal"
-            android:text="点击查看我的信息>>>"
+            android:text="我的信息>>>"
             android:minHeight="40dp"
             android:gravity="center"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="15dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-    </LinearLayout>
-</RelativeLayout>
+    </RelativeLayout>
+</LinearLayout>
