--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -48,7 +48,7 @@
     <style name="normal_text">
          <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
-        <item name="android:textColor">@color/normal_text_color</item>
+        <item name="android:textColor">@color/normal</item>
         <item name="android:textSize">14sp</item>
     </style>
 
